--- a/01-fundamentals/index.html
+++ b/01-fundamentals/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h1>Fundamentos</h1>
+    <h1>Fundamentals</h1>
+
+    <script src="fetch-1.js"></script>
 </body>
 
 </html>
