--- a/01-fundamentals/index.html
+++ b/01-fundamentals/index.html
@@ -10,7 +10,9 @@
 <body>
     <h1>Fundamentals</h1>
 
-    <script src="fetch-3.js"></script>
+    <img src="" alt="">
+
+    <script src="fetch-4.js"></script>
 </body>
 
 </html>
